# ninjazypy

./: .gitignore  README.md  output.7z  pyproject.toml
ninjazypy/: __init__.py  cli.py  core.py
ninjazypy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
