[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ninjazypy"
version = "0.1.0"
description = "A Python utility for .7z compression and extraction"
authors = [{name="Pranav Deshmukh", email="pranv.deshmukh05@gmail.com"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["testfolder"]
